SASS: Fixing background z-index

--- a/www/static/sass/image/_positions.sass
+++ b/www/static/sass/image/_positions.sass
@@ -1,6 +1,7 @@
 /*! File: image/_positions.sass */
 
 #images
+    z-index: -10
     position: fixed
     top: 70px
     left: 0
